# aipim

./: .gitignore  README.md  pyproject.toml  setup.py
aipim/: __init__.py  aux_functions.py  decorators.py
aipim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
