
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipim"
version = "0.1.0"
description = "Registro automático e organizado de execuções, parâmetros e resultados de simulações."
authors = [{ name = "Giovanni G. Ribeiro", email = "giovannigrttrb@email.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = ["aipim"]
